--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "@angular/common": "^7.1.3",
         "@angular/core": "^7.1.3",
         "@angular/forms": "^7.1.3",
-        "moment-mini": "^2.22.1"
+        "@angular/platform-browser": "^7.1.3"
     },
     "devDependencies": {
         "@angular/compiler": "^7.1.3",
