--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "ngx-bank-account-br",
-    "version": "0.9.1",
+    "name": "ngx-safety-pipe",
+    "version": "1.0.0-rc1",
     "description": "Address autocomplete directive for Angular.io (2+).",
     "main": "index.js",
     "scripts": {
@@ -11,11 +11,12 @@
         "lint": "ng lint",
         "e2e": "ng e2e",
         "prepublish": "npm run packagr",
-        "packagr": "ng-packagr -p ng-package.json"
+        "packagr": "ng-packagr -p ng-package.json",
+        "publish": "npm publish dist"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/leopq/ngx-bank-account-br.git"
+        "url": "git+https://github.com/leopq/ngx-safety-pipe.git"
     },
     "keywords": [
         "angular",
@@ -27,9 +28,9 @@
     "author": "Leonardo Quevedo",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/leopq/ngx-bank-account-br/issues"
+        "url": "https://github.com/leopq/ngx-safety-pipe/issues"
     },
-    "homepage": "https://github.com/leopq/ngx-bank-account-br#readme",
+    "homepage": "https://github.com/leopq/ngx-safety-pipe#readme",
     "dependencies": {
         "@angular/common": "^7.1.3",
         "@angular/core": "^7.1.3",
