refact(bundling): Improves the way the module is bundled.

--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-    "name": "ngx-safety-pipe",
-    "version": "1.0.0",
-    "description": "Safe resource, html and styles pipe for Angular.io.",
-    "main": "index.js",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e",
-        "prepublish": "npm run packagr",
-        "publish": "npm publish dist",
-        "packagr": "ng-packagr -p ng-package.json"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/leopq/ngx-safety-pipe.git"
-    },
-    "keywords": [
-        "angular",
-        "directive",
-        "ngx",
-        "dynamic",
-        "mask"
-    ],
-    "author": "Leonardo Quevedo",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/leopq/ngx-safety-pipe/issues"
-    },
-    "homepage": "https://github.com/leopq/ngx-safety-pipe#readme",
-    "dependencies": {
-        "@angular/common": "^7.1.3",
-        "@angular/core": "^7.1.3",
-        "@angular/forms": "^7.1.3",
-        "@angular/platform-browser": "^7.1.3"
-    },
-    "devDependencies": {
-        "@angular/compiler": "^7.1.3",
-        "@angular/compiler-cli": "^7.1.3",
-        "ng-packagr": "^4.4.5",
-        "tsickle": "^0.34.0",
-        "typescript": "3.1.1"
-    }
+  "name": "ngx-safety-pipe",
+  "version": "1.0.0-rc20",
+  "description": "Safe resource, html and styles pipe for Angular.io.",
+  "main": "index.js",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "prepublish": "npm run packagr",
+    "publish": "npm publish dist",
+    "packagr": "ng-packagr -p ng-package.json"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/leopq/ngx-safety-pipe.git"
+  },
+  "keywords": [
+    "angular",
+    "directive",
+    "ngx",
+    "dynamic",
+    "mask"
+  ],
+  "author": "Leonardo Quevedo",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/leopq/ngx-safety-pipe/issues"
+  },
+  "homepage": "https://github.com/leopq/ngx-safety-pipe#readme",
+  "dependencies": {
+    "@angular/common": "^6.0.7",
+    "@angular/core": "^6.0.7",
+    "@angular/forms": "^6.0.7",
+    "@angular/platform-browser": "^6.0.7"
+  },
+  "devDependencies": {
+    "@angular/compiler": "^6.0.7",
+    "@angular/compiler-cli": "^6.0.7",
+    "ng-packagr": "^4.7.0",
+    "tsickle": "^0.34.0",
+    "typescript": "^2.7.2"
+  }
 }
